fix dropdown, overflow nav options

--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -49,6 +49,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  height: 50px;
   background-color: black;
   color: white;
 
@@ -61,11 +62,14 @@
 
 .menu-nav-content {
   display: flex;
+  flex-wrap: wrap;
+  height: 50px;
+  overflow: hidden;
   flex: 1;
   align-items: center;
-  height: 100%;
   font-family: proxima-nova;
   padding-left: 5%;
+  margin-right: 10%;
 }
 
 .selected {
@@ -82,6 +86,7 @@
   font: inherit;
   cursor: pointer;
   outline: inherit;
+  white-space: nowrap;
 }
 
 .menu-content {
